--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>hanabi</title>
   <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/hanabi.css">
   <link rel="stylesheet" href="css/reload.css">
